--- a/template/package.json
+++ b/template/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "vue": "^2.3.3",
     "vue-class-component": "^5.0.2",
+    "vue-material": "^0.7.4",
     "vue-property-decorator": "^5.1.1",
     "vue-router": "^2.6.0"
   },
